# goit-pycore-hw-08

./: Dockerfile  README.md  addressbook.pkl  dz1_m8.py  pwdz31.py  pwdz32.py  pyproject.toml
dz10/: migrate_mongodb_to_postgres.py
dz10/quotes_project/: requirements.txt
dz10/quotes_project/quotes_app/: forms.py  models.py  urls.py  views.py
dz10/quotes_project/quotes_app/migrations/: 0001_initial.py  0002_remove_quote_tags_author_created_by_quote_created_at_and_more.py
dz10/quotes_project/quotes_project/: settings.py
dz10/quotes_project/scrapy_integration/: items.py  pipelines.py  reactor.py  scrapy.cfg  settings.py
dz11/: main.py
dz12/: requirements.txt
dz13/: main.py  requirements.txt
dz14/: .env  .gitignore  docker-compose.yml  main.py  repository.py  requirements.txt
dz14/docs/: Makefile  api.rst  conf.py  index.rst  make.bat
dz14/tests/: test_api.py  test_repository.py
dz4/: main.py
dz5/: main.py
dz5/exchange/: api_client.py  chat_client.html  chat_server.py  currency_service.py  data_formatter.py  exceptions.py
dz6/: main.py  main2.py
dz7/: alembic.ini  config.py  dz7.db  main.py  requirements.txt
dz7/migrations/: env.py
dz7/migrations/versions/: bb3d3d1501d7_initial_migration.py
dz7/models/: base.py  models.py
dz7/scripts/: my_select.py  seed.py
dz8/: main.py
dz8/project/: consumer_email.py  consumer_sms.py  models.py  producer.py
dz9/: authors.json  main.py  scrapy.cfg  search_quotes.py  upload_to_mongodb.py
dz9/quotes_scraper/: pipelines.py  settings.py
dz9/quotes_scraper/spiders/: quotes_spider.py
(+11 files in other folders)
